# api_python_mcp

./: .env.example  .flake8  .gitignore  CLAUDE.md  DEPLOY.md  README.md  mcp_adapter.py  mcp_server.py  pyproject.toml  railway.toml  requirements.txt  run_server.py  test_api_completa.py  test_ticket_creation.py
src/core/: glpi_entities.py  glpi_use_cases.py  use_cases.py
src/infrastructure/: glpi_client.py  glpi_ticket_repository.py
src/interfaces/http/: handler.py  server.py  swagger.py  swagger_ui.html
src/tests/: test_glpi_use_cases.py
