[tool.poetry]
name = "api-python-mcp"
version = "0.1.0"
description = "API REST em Python com integração GLPI"
authors = ["RudhyDev <rudhy.pereira@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"
requests = "^2.31.0"

[tool.poetry.scripts]
start = "run_server:main"
server = "run_server:main"
dev = "run_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
